"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-03-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-02-nonmeta-02-02:
	  Marked up code with possible reworkings of nonmeta references:
		1) replacing checking of nonmeta type equivalence,
			but changed my mind back and likely cancelling changes.
		2) new nonmeta reference class hierarchy, analogous
			to the rework with meta reference classes.
	  This revision has implemented 2) and will likely commit.  
	  Next: will commit some revisions, and run more tests, also attempt 
		to switch over to all pooled instance collections.


2006-03-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-02-nonmeta-02-01:
	  Branch: Reworking nonmeta reference infrastructure analogously to
		meta instance references for type checking, etc...
		Initial revision collapses part of the class hierarchy.  
	  Cleanup some obsolete code.  


	* HACKT-00-01-04-main-00-78-02:
	  Configuration update only.  


2006-03-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-01:
	  Added switches to turn on pool-allocation for instance_collections
		and value_collections.  Strange regression with one test case
		with instance_collection pool enabled, so that is left off.  
	  Switched over {pint,pbool,preal)_const to use chunk_map_pool
		for pool allocation (was list_vector_pool) because it is
		more suitable for small object allocation.  
		Unfortunately, bit_mask size is currently limited to 64, 
		but this can be easily extended in integer_traits.  
	  Added expression context parameter to CHP dumps.  
	  Discovered minor type-checking problem with nonmeta references, 
		need to fix shortly.  Already reworked parts of
		nonmeta reference class hierarchy, analogous to earlier
		rework of meta references.  
	  util library: improvements in pool-allocator macros.  
