@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "main/version.cc".
 
+2006-03-19	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-78-02-nonmeta-02-03:
+	  Fixed strange bug with nonmeta integer type comparison, 
+		didn't properly initialize int_instance_tollection's
+		type manager, and was getting garbage integer.  
+	  Now pooled instance allocations are enabled.
+
+
 2006-03-18	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-78-02-nonmeta-02-02:
